--- a/src/styles/marketplaceDefaults.css
+++ b/src/styles/marketplaceDefaults.css
@@ -16,9 +16,9 @@
 :root {
   /* ================ Colors ================ */
 
-  --marketplaceColor: #c0392b;
-  --marketplaceColorLight: #ff4c38;
-  --marketplaceColorDark: #8c291e;
+  --marketplaceColor: ##134124;
+  --marketplaceColorLight: ##134124;
+  --marketplaceColorDark: ##134124;
 
   /* Used with inline CSS SVGs */
   --marketplaceColorEncoded: %23c0392b;
